Fix overflow for hotspot highlight

--- a/src/css/home/HomeSectionSpotlight.css
+++ b/src/css/home/HomeSectionSpotlight.css
@@ -21,6 +21,7 @@
     width: 100%;
   }
   & .InlineHorizontalBookList {
+    overflow: auto;
     padding-bottom: 30px;
   }
   & .InlineHorizontalBookList_Item {
